--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,8 +23,7 @@ author = {Wang, Tianyu and Jin, Minhao and Li, Mian},
 title = {Towards accurate and interpretable surgical skill assessment: a video-based method for skill score prediction and guiding feedback generation},
 year = {2021},
 booktitle = {Int J CARS 16},
-url = {https://doi.org/10.1007/s11548-021-02448-4},
-selected={true}
+url = {https://doi.org/10.1007/s11548-021-02448-4}
 }
 
 @inproceedings{10.1145/3341105.3374092,
@@ -42,6 +41,5 @@ pages = {2117–2120},
 numpages = {4},
 keywords = {video-based action quality assessment on human hand, data-driven, origami dataset, real time, hand pose organization},
 location = {Brno, Czech Republic},
-series = {SAC '20},
-selected={true}
+series = {SAC '20}
 }
