--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,9 @@ numpages = {15},
 keywords = {privacy, generative adversarial networks, network packets, synthetic data generation, network flows},
 location = {Amsterdam, Netherlands},
 series = {SIGCOMM '22},
+code = {https://github.com/netsharecmu/NetShare},
+pdf = {https://dl.acm.org/doi/pdf/10.1145/3544216.3544251},
+preview = {netshare.jpg},
 selected={true}
 }
 
@@ -23,7 +26,8 @@ author = {Wang, Tianyu and Jin, Minhao and Li, Mian},
 title = {Towards accurate and interpretable surgical skill assessment: a video-based method for skill score prediction and guiding feedback generation},
 year = {2021},
 booktitle = {Int J CARS 16},
-url = {https://doi.org/10.1007/s11548-021-02448-4}
+url = {https://doi.org/10.1007/s11548-021-02448-4},
+preview = {p2.jpg}
 }
 
 @inproceedings{10.1145/3341105.3374092,
@@ -41,5 +45,7 @@ pages = {2117–2120},
 numpages = {4},
 keywords = {video-based action quality assessment on human hand, data-driven, origami dataset, real time, hand pose organization},
 location = {Brno, Czech Republic},
-series = {SAC '20}
+series = {SAC '20},
+pdf = {https://dl.acm.org/doi/pdf/10.1145/3341105.3374092},
+preview = {p1.jpg}
 }
