--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@ location = {Amsterdam, Netherlands},
 series = {SIGCOMM '22},
 code = {https://github.com/netsharecmu/NetShare},
 pdf = {https://dl.acm.org/doi/pdf/10.1145/3544216.3544251},
-preview = {netshare.jpg},
+abbr = {SIGCOMM},
 selected={true}
 }
 
@@ -27,7 +27,7 @@ title = {Towards accurate and interpretable surgical skill assessment: a video-b
 year = {2021},
 booktitle = {Int J CARS 16},
 url = {https://doi.org/10.1007/s11548-021-02448-4},
-preview = {p2.jpg}
+abbr = {Int J CARS}
 }
 
 @inproceedings{10.1145/3341105.3374092,
@@ -47,5 +47,5 @@ keywords = {video-based action quality assessment on human hand, data-driven, or
 location = {Brno, Czech Republic},
 series = {SAC '20},
 pdf = {https://dl.acm.org/doi/pdf/10.1145/3341105.3374092},
-preview = {p1.jpg}
+abbr = {SAC}
 }
