--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,11 +21,19 @@ abbr = {SIGCOMM},
 selected={true}
 }
 
-@inproceedings{journal,
+@article{Wang2021,
 author = {Wang, Tianyu and Jin, Minhao and Li, Mian},
 title = {Towards accurate and interpretable surgical skill assessment: a video-based method for skill score prediction and guiding feedback generation},
+journal = {International Journal of Computer Assisted Radiology and Surgery},
 year = {2021},
-booktitle = {Int J CARS 16},
+month = {Sep},
+day = {01},
+volume = {16},
+number = {9},
+pages = {1595-1605},
+abstract = {Recently, automatic surgical skill assessment has received the attention given the increasingly important role of surgical training. The assessment usually involves skill score prediction and further feedback generation. Existing work on skill score prediction is limited with several challenges and deserves more promising outcomes. For the feedback, most work identifies the flaws on the granularity of video frames or clips. It thus remains to be explored how to identify poorly performed gestures (segments) and further how to provide good references for improvement.},
+issn = {1861-6429},
+doi = {10.1007/s11548-021-02448-4},
 url = {https://doi.org/10.1007/s11548-021-02448-4},
 abbr = {Int J CARS}
 }
