--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,15 @@ abbr = {SIGCOMM},
 selected={true}
 }
 
+@inproceedings{pcapshare,
+author = {Yin, Yucheng and Lin, Zinan and Jin, Minhao and Fanti, Giulia and Sekar, Vyas},
+title = {PcapShare: Exploring the Feasibility of GANs for Synthetic Packet Header Trace Generation},
+year = {2022},
+booktitle = {Fourteenth InternationalConference on COMmunication Systems and NETworkS (demo)},
+series = {COMSNETS '22},
+abbr = {COMSNETS},
+}
+
 @article{Wang2021,
 author = {Wang, Tianyu and Jin, Minhao and Li, Mian},
 title = {Towards accurate and interpretable surgical skill assessment: a video-based method for skill score prediction and guiding feedback generation},
