--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,25 @@
+@misc{jin2024pantspracticaladversarialnetwork,
+    title={PANTS: Practical Adversarial Network Traffic Samples against ML-powered Networking Classifiers}, 
+    author={Minhao Jin and Maria Apostolaki},
+    year={2024},
+    eprint={2409.04691},
+    archivePrefix={arXiv},
+    primaryClass={cs.CR},
+    url={https://arxiv.org/abs/2409.04691},
+    series={arXiv},
+    abbr={arXiv}
+}
+
+
+@article{minhao_master_thesis,
+    author = "Minhao Jin",
+    title = "{Improving Managed Network Services Using Cooperative Synthetic Data Augmentation}",
+    year = "2023",
+    month = "5",
+    url = "https://kilthub.cmu.edu/articles/thesis/Improving_Managed_Network_Services_Using_Cooperative_Synthetic_Data_Augmentation/22266367",
+    doi = "10.1184/R1/22266367.v1",
+    abbr={MS Thesis}
+}
 
 @inproceedings{10.1145/3544216.3544251,
 author = {Yin, Yucheng and Lin, Zinan and Jin, Minhao and Fanti, Giulia and Sekar, Vyas},
@@ -66,3 +88,4 @@ series = {SAC '20},
 pdf = {https://dl.acm.org/doi/pdf/10.1145/3341105.3374092},
 abbr = {SAC}
 }
+
