--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,11 @@
-@misc{jin2024pantspracticaladversarialnetwork,
+@inproceedings{jin2024pantspracticaladversarialnetwork,
     title={PANTS: Practical Adversarial Network Traffic Samples against ML-powered Networking Classifiers}, 
     author={Minhao Jin and Maria Apostolaki},
-    year={2024},
-    eprint={2409.04691},
-    archivePrefix={arXiv},
-    primaryClass={cs.CR},
-    url={https://arxiv.org/abs/2409.04691},
-    series={arXiv},
-    abbr={arXiv}
+    year={2025},
+    booktitle = {34rd USENIX Security Symposium (USENIX Security 25)},
+    series={USENIX Security '25},
+    abbr={USENIX Security},
+    selected={true}
 }
 
 
