--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
     booktitle = {34rd USENIX Security Symposium (USENIX Security 25)},
     series={USENIX Security '25},
     abbr={USENIX Security},
+    preview={pants.png},
     selected={true}
 }
 
@@ -16,6 +17,7 @@
     month = "5",
     url = "https://kilthub.cmu.edu/articles/thesis/Improving_Managed_Network_Services_Using_Cooperative_Synthetic_Data_Augmentation/22266367",
     doi = "10.1184/R1/22266367.v1",
+    preview={colabgan.png},
     abbr={MS Thesis}
 }
 
@@ -38,16 +40,8 @@ series = {SIGCOMM '22},
 code = {https://github.com/netsharecmu/NetShare},
 pdf = {https://dl.acm.org/doi/pdf/10.1145/3544216.3544251},
 abbr = {SIGCOMM},
+preview={netshare.png},
 selected={true}
-}
-
-@inproceedings{pcapshare,
-author = {Yin, Yucheng and Lin, Zinan and Jin, Minhao and Fanti, Giulia and Sekar, Vyas},
-title = {PcapShare: Exploring the Feasibility of GANs for Synthetic Packet Header Trace Generation},
-year = {2022},
-booktitle = {Fourteenth InternationalConference on COMmunication Systems and NETworkS (demo)},
-series = {COMSNETS '22},
-abbr = {COMSNETS},
 }
 
 @article{Wang2021,
@@ -64,6 +58,7 @@ abstract = {Recently, automatic surgical skill assessment has received the atten
 issn = {1861-6429},
 doi = {10.1007/s11548-021-02448-4},
 url = {https://doi.org/10.1007/s11548-021-02448-4},
+preview={ijcars.png},
 abbr = {IJCARS}
 }
 
@@ -84,6 +79,7 @@ keywords = {video-based action quality assessment on human hand, data-driven, or
 location = {Brno, Czech Republic},
 series = {SAC '20},
 pdf = {https://dl.acm.org/doi/pdf/10.1145/3341105.3374092},
+preview={sac.png},
 abbr = {SAC}
 }
 
