--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 @inproceedings{jin2024pantspracticaladversarialnetwork,
-    title={PANTS: Practical Adversarial Network Traffic Samples against ML-powered Networking Classifiers}, 
+    title={Robustifying ML-powered Network Classifiers with PANTS}, 
     author={Minhao Jin and Maria Apostolaki},
     year={2025},
     booktitle = {34rd USENIX Security Symposium (USENIX Security 25)},
