--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,6 +35,7 @@ improves the robustness of the target MNCs by 52.7%
 (even against attackers outside of what is considered during
 robustification) without sacrificing their accuracy.},
     pdf = {https://arxiv.org/abs/2409.04691},
+    code = {https://github.com/jinminhao/PANTS},
     selected={true}
 }
 
@@ -47,7 +48,9 @@ robustification) without sacrificing their accuracy.},
     url = "https://kilthub.cmu.edu/articles/thesis/Improving_Managed_Network_Services_Using_Cooperative_Synthetic_Data_Augmentation/22266367",
     doi = "10.1184/R1/22266367.v1",
     preview={colabgan.png},
-    abbr={MS Thesis}
+    abbr={MS Thesis},
+    abstract = {https://www.proquest.com/docview/2759307887?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses},
+    pdf = {https://www.proquest.com/docview/2759307887?pq-origsite=gscholar&fromopenview=true&sourcetype=Dissertations%20&%20Theses},
 }
 
 @inproceedings{10.1145/3544216.3544251,
